--- a/src/main/resources/templates/funcionario/index.html
+++ b/src/main/resources/templates/funcionario/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<link rel="icon" th:href="@{/img/caixa.png}" type="image/x-icon">
-	
+
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -40,6 +40,17 @@
 			<div class="form-group">
 				<label for="datanascimento">Data de Nascimento</label>
 				<input th:field="*{datanascimento}" type="date" class="form-control" id="datanascimento">
+			</div>
+			<div class="form-group">
+				<label for="username">Username</label>
+				<input th:field="*{usuario.username}" type="text" class="form-control" id="username">
+			</div>
+			<div class="form-group">
+				<label for="senha">Senha</label>
+				<input th:field="*{usuario.password}" type="password" class="form-control" id="senha">
+			</div>
+			<div class="form-group">
+				<input th:field="*{usuario.id}" type="hidden">
 			</div>
 			<button type="submit" class="btn btn-primary">Salvar</button>
 		</form>
