--- a/src/main/resources/templates/categoria/index.html
+++ b/src/main/resources/templates/categoria/index.html
@@ -6,12 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<link rel="icon" th:href="@{/img/caixa.png}" type="image/x-icon">
-	
+
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-		
+
 	<link rel="stylesheet" th:href="@{/css/style.css}">
 
 	<title>Controle de Estoque</title>
@@ -25,13 +25,15 @@
 		<h1>Categorias</h1>
 
 		<form method="post" th:action="@{/categoria/salvar}" th:object="${categoria}">
-			<div class="form-group">
-				<label for="codigo">Código</label>
-				<input th:field="*{id}" type="text" readonly class="form-control" id="codigo">
-			</div>
-			<div class="form-group">
-				<label for="descricao">Descrição</label>
-				<input th:field="*{descricao}" type="text" class="form-control" id="descricao">
+			<div class="row">
+				<div class="form-group col-12 col-md-6">
+					<label for="codigo">Código</label>
+					<input th:field="*{id}" type="text" readonly class="form-control" id="codigo">
+				</div>
+				<div class="form-group col-12 col-md-6">
+					<label for="descricao">Descrição</label>
+					<input th:field="*{descricao}" type="text" class="form-control" id="descricao">
+				</div>
 			</div>
 			<button type="submit" class="btn btn-primary">Salvar</button>
 		</form>
@@ -41,9 +43,6 @@
 			<span th:if="!${retorno}" class="alert alert-danger" th:text="${mensagem}"></span>
 		</div>
 	</main>
-
-	<footer th:include="fragmentos::rodape">
-	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
