--- a/src/main/resources/templates/cliente/index.html
+++ b/src/main/resources/templates/cliente/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	
+
 	<link rel="icon" th:href="@{/img/caixa.png}" type="image/x-icon">
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -25,21 +25,25 @@
 		<h1>Clientes</h1>
 
 		<form method="post" th:action="@{/cliente/salvar}" th:object="${cliente}">
-			<div class="form-group">
-				<label for="codigo">Código</label>
-				<input th:field="*{id}" type="text" readonly class="form-control" id="codigo">
+			<div class="row">
+				<div class="form-group col-12 col-md-6">
+					<label for="codigo">Código</label>
+					<input th:field="*{id}" type="text" readonly class="form-control" id="codigo">
+				</div>
+				<div class="form-group col-12 col-md-6">
+					<label for="nome">Nome</label>
+					<input th:field="*{nome}" type="text" class="form-control" id="nome">
+				</div>
 			</div>
-			<div class="form-group">
-				<label for="nome">Nome</label>
-				<input th:field="*{nome}" type="text" class="form-control" id="nome">
-			</div>
-			<div class="form-group">
-				<label for="datanascimento">Data de Nascimento</label>
-				<input th:field="*{datanascimento}" type="date" class="form-control" id="datanascimento">
-			</div>
-			<div class="form-group">
-				<label for="email">Email</label>
-				<input th:field="*{email}" type="email" class="form-control" id="email">
+			<div class="row">
+				<div class="form-group col-12 col-md-6">
+					<label for="datanascimento">Data de Nascimento</label>
+					<input th:field="*{datanascimento}" type="date" class="form-control" id="datanascimento">
+				</div>
+				<div class="form-group col-12 col-md-6">
+					<label for="email">Email</label>
+					<input th:field="*{email}" type="email" class="form-control" id="email">
+				</div>
 			</div>
 			<button type="submit" class="btn btn-primary">Salvar</button>
 		</form>
@@ -49,9 +53,6 @@
 			<span th:if="!${retorno}" class="alert alert-danger" th:text="${mensagem}"></span>
 		</div>
 	</main>
-
-	<footer th:include="fragmentos::rodape">
-	</footer>
 
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"
 		integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
