--- a/src/main/resources/templates/produto/listar.html
+++ b/src/main/resources/templates/produto/listar.html
@@ -4,13 +4,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	
-	<link rel="icon" th:href="@{/img/caixa.png}" type="image/x-icon">
-	
+
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
 		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
+	<link rel="icon" th:href="@{/img/caixa.png}" type="image/x-icon">
 
 	<link rel="stylesheet" th:href="@{/css/style.css}">
 
@@ -22,10 +22,10 @@
 	</header>
 
 	<main class="container my-5">
-		<h1>Funcionários</h1>
+		<h1>Produtos</h1>
 
 		<div class="mb-5">
-			<a class="btn btn-info" th:href="@{/funcionario/index}">
+			<a class="btn btn-info" th:href="@{/produto/index}">
 				ADICIONAR
 			</a>
 		</div>
@@ -35,9 +35,11 @@
 				<tr>
 					<th scope="col">Código</th>
 					<th scope="col">Nome</th>
-					<th scope="col">Email</th>
-					<th scope="col">Data de Nascimento</th>
-					<th scope="col">Username</th>
+					<th scope="col">Descrição</th>
+					<th scope="col">Estoque</th>
+					<th scope="col">Preço</th>
+					<th scope="col">Categoria</th>
+					<th scope="col">Imagem</th>
 					<th scope="col">Alterar</th>
 					<th scope="col">Excluir</th>
 				</tr>
@@ -46,12 +48,16 @@
 				<tr th:each="item:${lista}">
 					<th scope="row" th:text="${item.id}"></th>
 					<td th:text="${item.nome}"></td>
-					<td th:text="${item.email}"></td>
-					<td th:text="${item.datanascimento}"></td>
-					<td th:text="${item.usuario.username}"></td>
-					<td><a class="btn btn-info" th:href="@{/funcionario/preAlterar(id=${item.id})}">Alterar</a></td>
+					<td th:text="${item.descricao}"></td>
+					<td th:text="${item.estoque}"></td>
+					<td th:text="${item.preco}"></td>
+					<td th:text="${item.categoria.descricao}"></td>
+					<td><img width="100px" height="100px" style="object-fit: contain;" class="img-fluid" th:src="@{'/produto/getimagem/' + *{item.imagem}}">
+					</td>
+					<td><a class="btn btn-info" th:href="@{/produto/preAlterar(id=${item.id})}">Alterar</a></td>
 					<td><button class="btn btn-info excluir" data-target="#myModal" type="button" th:id="${item.id}"
-							data-value="/funcionario/excluir?id={id}" data-toggle="modal">Excluir</button></td>
+							data-value="/produto/excluir?id={id}" data-toggle="modal">Excluir</butt>
+					</td>
 				</tr>
 			</tbody>
 		</table>
